--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,9 @@
   padding: 0;
   font-family: sans-serif;
 }
+body {
+  overflow: hidden;
+}
 
 .nav {
   display: flex;
@@ -54,6 +57,10 @@ a:hover {
 
 button:hover {
   opacity: 0.7;
+}
+
+.main input {
+  width: 90%;
 }
 
 @media (max-width: 768px) {
