--- a/templates/three.html
+++ b/templates/three.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="nav">
-      <a href="/">Home</a>
+      <a href="/">Jotto Word Game Solver</a>
     </div>
     <div class="main">
       <h1>Three word solver</h1>
@@ -18,6 +18,7 @@
       <input type="number" id="feedback" min="0" max="3" />
       <button onclick="sendFeedback()">Submit</button>
       <p id="words"></p>
+      <div id="loading" style="display: none">Loading...</div>
     </div>
     <script src="../static/script/three.js"></script>
   </body>
