--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         <a href="/sixuni">six letter unique word solver</a>
       </div>
       <form>
-        <button type="submit">Reset Game</button>
+        <button id="reset-game" type="submit">Reset Game</button>
       </form>
     </div>
     <div class="about">
@@ -50,5 +50,6 @@
         <a href="mailto:prakharkumar.srivastava.22cse@bmu.edu.in">Contact</a>
       </div>
     </footer>
+    <script src="../static/script/app.js"></script>
   </body>
 </html>
